# mini-model-serving-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: alerts.yaml  drift.yaml  model_example.yaml  platform.yaml
docs/: architecture.md
examples/: feature_data.parquet  sample_requests.jsonl
examples/model_repository/example_model/: config.pbtxt
examples/model_repository/example_model/1/: model.onnx
infra/: docker-compose.yaml
infra/grafana/dashboards/: platform_dashboard.json
infra/prometheus/: alertmanager.yaml  alerts.yaml  prometheus.yaml  rules.yaml
k8s/apps/: argocd-application.yaml
k8s/base/: feature-api-deployment.yaml  gateway-deployment.yaml  grafana.yaml  kustomization.yaml  namespace.yaml  platform-config.yaml  prometheus.yaml  triton-deployment.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: build_example_model.py  load_features.py  send_load.py
src/mmsp/: __init__.py  cli.py
src/mmsp/deploy/: canary.py  k8s.py  rollback.py  triton_repo.py
src/mmsp/features/: api.py  feast_adapter.py  lightweight_store.py
src/mmsp/monitoring/: drift.py  metrics.py  profiler.py
src/mmsp/registry/: api.py  models.py  store.py
src/mmsp/serving/: client.py  gateway.py  schemas.py
src/mmsp/utils/: config.py  io.py  logging.py  time.py
tests/: test_canary_logic.py  test_cli_smoke.py  test_drift.py  test_registry.py
(+1 files in other folders)
